--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -21,9 +21,9 @@
     <item android:id="@+id/nav_contact"
         android:title="聯絡我們"
         android:icon="@drawable/ic_baseline_email_24"/>
-    <item android:id="@+id/nav_listen"
-        android:title="監測"
-        android:icon="@drawable/ic_baseline_email_24"/>
+<!--    <item android:id="@+id/nav_listen"-->
+<!--        android:title="監測"-->
+<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
 
 <!--    <item android:id="@+id/nav_esm"-->
 <!--        android:title="ESM頁面"-->
