add scroll more

--- a/app_i/src/main/res/layout/nested_layer2_category.xml
+++ b/app_i/src/main/res/layout/nested_layer2_category.xml
@@ -1,20 +1,28 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chinatimes.Chinatimes1Fragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:text="@string/hello_blank_fragment" />-->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/idRVItems"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            app:fabSize="mini"
+            android:backgroundTint="#bcd4e3"
+            app:borderWidth="0dp"
+            android:src="@drawable/baseline_keyboard_arrow_up_24" />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </FrameLayout>
