--- a/app_i/src/main/res/layout/news_rv_item.xml
+++ b/app_i/src/main/res/layout/news_rv_item.xml
@@ -22,31 +22,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:layout_toLeftOf="@+id/imgView"
-            android:layout_toStartOf="@+id/imgView"
+            android:layout_toStartOf="@+id/imgCard"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:maxLines="3"
-            android:textSize="18dp"
-            android:text="Category Text"
-            android:paddingEnd="5dp"
-            android:paddingRight="5dp"
+            android:textSize="18sp"
+            android:text="@string/category_text"
+            android:paddingEnd="8dp"
             android:textColor="#343434"
             android:gravity="center_vertical"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:ignore="RtlSymmetry" />
 
 
         <TextView
             android:id="@+id/text_view_pubtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_below="@id/text_view_title"
-            android:text="2022/03/2418:06:02"
-            android:paddingEnd="5dp"
-            android:paddingRight="5dp"
+            android:text="@string/_2022_03_2418_06_02"
+            android:paddingEnd="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             tools:ignore="RtlSymmetry" />
 
@@ -54,22 +50,27 @@
             android:id="@+id/text_view_media"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Media Name"
+            android:text="@string/media_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:layout_below="@id/text_view_title"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/text_view_pubtime"
             android:layout_toEndOf="@+id/text_view_pubtime" />
-        <ImageView
-            android:id="@+id/imgView"
-            app:srcCompat="@drawable/ic_baseline_downloading_24"
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imgCard"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            tools:ignore="VectorDrawableCompat" />
+            app:cardCornerRadius="8dp">
+
+            <ImageView
+                android:id="@+id/imgView"
+                app:srcCompat="@drawable/ic_baseline_downloading_24"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                tools:ignore="VectorDrawableCompat" />
+        </androidx.cardview.widget.CardView>
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
-
-<!--    android:layout_alignParentEnd="true"-->
-<!--    android:layout_alignParentBottom="true"-->
