remove not used file

--- a/app_i/src/main/res/layout/activity_read_history_weekly.xml
+++ b/app_i/src/main/res/layout/activity_read_history_weekly.xml
@@ -1,20 +1,18 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ReadHistoryWeeklyFragment">
-<!--    <com.github.mikephil.charting.charts.LineChart-->
-<!--        android:id="@+id/lineChart"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent" />-->
+    tools:context=".ui.ReadHistoryWeeklyFragment">
+    <!--    <com.github.mikephil.charting.charts.LineChart-->
+    <!--        android:id="@+id/lineChart"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent" />-->
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
-<!--    <com.github.mikephil.charting.charts.BarChart-->
-<!--        android:id="@+id/chart_bar"-->
+    <!--    <com.github.mikephil.charting.charts.BarChart-->
+    <!--        android:id="@+id/chart_bar"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"/>-->
 </FrameLayout>
