--- a/app_i/src/main/res/layout/fragment_tab1.xml
+++ b/app_i/src/main/res/layout/fragment_tab1.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReadHistorySummaryFragment">
+    tools:context=".ui.ReadHistorySummaryFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
