--- a/app_i/src/main/res/layout/activity_login.xml
+++ b/app_i/src/main/res/layout/activity_login.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
 
     <TextView
         android:id="@+id/tv_login"
@@ -16,7 +14,8 @@
         android:layout_marginTop="200dp"
         android:layout_marginBottom="40dp"
         android:text="Welcome to NewsMoment!!!"
-        android:textSize="40sp"/>
+        android:textSize="40sp" />
+
     <EditText
         android:id="@+id/et_username"
         android:layout_below="@+id/tv_login"
