--- a/app_i/src/main/res/layout/activity_media_rank.xml
+++ b/app_i/src/main/res/layout/activity_media_rank.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MediaRankActivity">
+    tools:context=".activity.MediaRankActivity">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mediaItems"
         android:layout_width="match_parent"
