--- a/app_i/src/main/res/layout/activity_news_module.xml
+++ b/app_i/src/main/res/layout/activity_news_module.xml
@@ -25,7 +25,7 @@
         <LinearLayout
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/layout_inside"
-            tools:context=".NewsModuleActivity"
+            tools:context=".activity.NewsModuleActivity"
             android:orientation="vertical"
             android:gravity="center_horizontal|center_vertical"
             android:layout_gravity="center_horizontal"
