--- a/app_i/src/main/res/layout/activity_push_history.xml
+++ b/app_i/src/main/res/layout/activity_push_history.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".PushHistoryActivity">
+    tools:context=".activity.PushHistoryActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
