--- a/app_i/src/main/res/layout/activity_login.xml
+++ b/app_i/src/main/res/layout/activity_login.xml
@@ -11,10 +11,11 @@
         android:id="@+id/tv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="40dp"
         android:text="Welcome to NewsMoment!!!"
         android:textSize="40sp" />
+
 
     <EditText
         android:id="@+id/et_username"
@@ -22,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:hint="UserName"/>
+        android:hint="UserName" />
+
     <EditText
         android:id="@+id/et_password"
         android:layout_below="@+id/et_username"
@@ -30,28 +32,43 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:hint="Password"
-        android:inputType="textPassword"/>
-    <Button
+        android:inputType="textPassword" />
+
+    <LinearLayout
+        android:id="@+id/login_buttons"
+        android:layout_below="@id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_password"
-        android:text="LOG IN"
-        android:background="#000000"
-        android:textColor="#fff"
-        android:id="@+id/bt_login"/>
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="LOG IN"
+            android:background="#000000"
+            android:textColor="#fff"
+            android:elevation="50dp"
+            android:id="@+id/bt_login" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:visibility="visible" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/bt_login"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-
         android:layout_marginTop="50dp"
-
+        android:layout_below="@+id/login_buttons"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:adjustViewBounds="true"
         android:maxHeight="100dp"
         android:scaleType="centerInside"
