--- a/app_i/src/main/res/layout/media_rv_item.xml
+++ b/app_i/src/main/res/layout/media_rv_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,45 +9,45 @@
     android:layout_marginTop="8dp"
     android:clickable="true"
     app:cardCornerRadius="10dp"
-    app:cardBackgroundColor="#f3f9ff">
+    app:cardBackgroundColor="#f3f9ff"
+    android:focusable="true">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?android:attr/selectableItemBackground"
         android:padding="8dp">
-    <!--Text view for displaying our text -->
 
-    <ImageView
-        android:id="@+id/mediaiconView"
-        app:srcCompat="@drawable/error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        tools:ignore="VectorDrawableCompat" />
-    <TextView
-        android:id="@+id/text_view_media_rank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:textSize="30dp"
-        android:text="Category Text"
-        android:textColor="#343434"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/mediaiconView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-    <ImageView
-        android:id="@+id/handleView"
-        app:srcCompat="@drawable/swap_vert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
+        <ImageView
+            android:id="@+id/mediaiconView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            tools:ignore="VectorDrawableCompat" />
 
-        tools:ignore="VectorDrawableCompat" />
+        <TextView
+            android:id="@+id/text_view_media_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textSize="30sp"
+            android:text="Category Text"
+            android:textColor="#343434"
+            android:gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/mediaiconView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <ImageView
+            android:id="@+id/handleView"
+            app:srcCompat="@drawable/swap_vert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+
+            tools:ignore="VectorDrawableCompat" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
