--- a/app_i/src/main/res/layout/nested_layer2_category.xml
+++ b/app_i/src/main/res/layout/nested_layer2_category.xml
@@ -29,8 +29,16 @@
             app:fabSize="mini"
             android:backgroundTint="#bcd4e3"
             app:borderWidth="0dp"
-            android:src="@drawable/baseline_keyboard_arrow_up_24" />
+            android:src="@drawable/baseline_keyboard_arrow_up_24"
+            android:contentDescription="floating_action_button" />
 
+        <TextView
+            android:id="@+id/noDataTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Oops 沒有資料，refresh 看看"
+            android:visibility="gone" /> <!-- Initially hidden -->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </FrameLayout>
