--- a/app_i/src/main/res/layout/activity_news_module.xml
+++ b/app_i/src/main/res/layout/activity_news_module.xml
@@ -17,7 +17,7 @@
         <LinearLayout xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/layout_inside"
             android:layout_gravity="center_horizontal"
-            tools:context=".activity.NewsModuleActivity"
+            tools:context=".activity.NewsContentActivity"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"></LinearLayout>
