--- a/app_i/src/main/res/layout/activity_news_hybrid.xml
+++ b/app_i/src/main/res/layout/activity_news_hybrid.xml
@@ -43,7 +43,7 @@
                     app:tabTextAppearance="@style/TabLayoutTextStyle" />
             </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.viewpager.widget.ViewPager
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/container_hy"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
