--- a/app_i/src/main/res/layout/activity_news_hybrid.xml
+++ b/app_i/src/main/res/layout/activity_news_hybrid.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/main_content_hy"
+            android:id="@+id/main_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
