--- a/app_i/src/main/res/layout/nested_layer2_category.xml
+++ b/app_i/src/main/res/layout/nested_layer2_category.xml
@@ -1,44 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/idRVItems"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        app:fabSize="mini"
+        android:backgroundTint="#bcd4e3"
+        app:borderWidth="0dp"
+        android:src="@drawable/baseline_keyboard_arrow_up_24"
+        android:contentDescription="floating_action_button" />
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/idRVItems"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            app:fabSize="mini"
-            android:backgroundTint="#bcd4e3"
-            app:borderWidth="0dp"
-            android:src="@drawable/baseline_keyboard_arrow_up_24"
-            android:contentDescription="floating_action_button" />
-
-        <TextView
-            android:id="@+id/noDataTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Oops 沒有資料，refresh 看看"
-            android:visibility="gone" /> <!-- Initially hidden -->
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-</FrameLayout>
+    <!-- Initially hidden -->
+    <TextView
+        android:id="@+id/noDataTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Oops 沒有資料，refresh 看看"
+        android:visibility="gone" />
+</RelativeLayout>
