--- a/app_i/src/main/res/layout/news_content.xml
+++ b/app_i/src/main/res/layout/news_content.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,17 +8,17 @@
     android:orientation="vertical">
 
     <androidx.core.widget.NestedScrollView
-        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <!--        necessary for dynamic adding view-->
         <LinearLayout xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/layout_inside"
             android:layout_gravity="center_horizontal"
             tools:context=".activity.NewsContentActivity"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_height="wrap_content" />
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
