--- a/app_i/src/main/res/layout/nav_header_layout.xml
+++ b/app_i/src/main/res/layout/nav_header_layout.xml
@@ -15,7 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_face_black_48"
-        android:layout_marginLeft="32dp"
         tools:ignore="VectorDrawableCompat" />
     <TextView
         android:layout_width="wrap_content"
@@ -28,7 +27,6 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="32dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"/>
     <TextView
         android:id="@+id/textView_user_phone"
@@ -41,7 +39,6 @@
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="32dp"
         tools:ignore="MissingConstraints"
         app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
         />
@@ -52,12 +49,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
         android:text="@string/user_phone_Id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_user_phone" />
+
+    <TextView
+        android:id="@+id/app_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="App Version:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_user_phone"
-        android:layout_marginLeft="32dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_user_id" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--    app:layout_constraintTop_toBottomOf="@+id/imageView"-->
